Fixed Modal Background not Blurred Issue and Added Tooltip on Account Action Buttons.

--- a/frontendapp/src/app/main/accounts/account.component.css
+++ b/frontendapp/src/app/main/accounts/account.component.css
@@ -1,9 +1,13 @@
 .action-btn {
-  line-height: 1;
-  padding: 5px;
-  width: 50%;
+  margin: 0 20px;
+  padding: 2px;
+  width: 30%;
 }
 
 .fixHeight {
   height: 30px;
+}
+
+.disabled-btn {
+  cursor: not-allowed;
 }
